--- a/VRChat/78/1176578.html
+++ b/VRChat/78/1176578.html
@@ -81,7 +81,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "4YsitIDRKkUEKIkokcstMkGoAjcU675X4T/MSW5IyhE="></script>
+    "TzEfVkG/mYZHofbsOe8Vtgl5KbM/OVsY/jDoaJ7zwIg="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"彗星のブローチ(Comet Brooch) ※Old Data","description":"Marun Original Avatar Series\nAccessory No.004 -Comet Brooch-\n\n「彗星のブローチ」\nスピカの妹であるノエルが、スピカのために作ったブローチ。\n姉思いな彼女の、強力な魔力が込められている。\n\n\n●内容物\n・FBX１つ\n・テクスチャー１枚\n・UV展開図１枚\n・Prefabs入りUnitypackage１つ\n・Readme１枚\n\n●利用規約\n・再配布禁止。\n・自作と偽る行為の禁止。\n・その他､改変等あらゆる行為の許可。\n\n●注意事項\n・本データ、および3DモデルはVRChatでの使用を想定しています。\n・本データの著作権は作者(焔霊マルン)に帰属するものとします。\n・本データを使用した事によるトラブルに関して作者は一切の責任を負いません。\n\n△ポリゴン数2656 マテリアル数2 テクスチャー1枚\n\n作者への連絡先 → https://twitter.com/Marun_Spirit","url":"https://booth.pm/ja/items/1176578","offers":{"priceCurrency":"JPY","@type":"Offer","price":"0"},"image":"https://booth.pximg.net/c/620x620/8ff6fcbd-9bfc-47c9-869c-9f7e8280f01b/i/1176578/1e99d50a-eab2-425b-abc8-277093e5e419_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="4YsitIDRKkUEKIkokcstMkGoAjcU675X4T/MSW5IyhE="></script>
+    nonce="TzEfVkG/mYZHofbsOe8Vtgl5KbM/OVsY/jDoaJ7zwIg="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -381,9 +381,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
