--- a/VRChat/51/1175951.html
+++ b/VRChat/51/1175951.html
@@ -81,7 +81,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "9CNJ+rU1Uo769bGpofRWJxZJUam1a0xWO6/VL5CNvmE="></script>
+    "T404qDqI5jqr0wxc0cmvpvHFaRJN3/GfVvCr8YnZNoE="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"Translator4VRC","description":"VRChatでVRのカメラかF12キーで外国語の文章のスクリーンショットを撮ると画像から文字を認識し翻訳して表示するアプリです。\nVOICEROID+, VOICEROID2, 音街ウナTalk Ex, CeVIOを使って翻訳結果を読み上げることができます。音声合成ソフトを所持していなくてもGoogleまたはWindowsの読み上げ機能が使用できます。\n\nアップデート情報\n2019年7月27日\n・通信量を20%削減\n・翻訳中，再生中に撮影されたスクリーンショットも翻訳するように変更\n\n対応OS\nWindows 10 64bit\n\n不具合があれば@minami_vrに報告をお願いします\nhttps://twitter.com/minami_vr\n\nTranslator4VRCは以下のライブラリを使用しています\nNAudio https://github.com/naudio/NAudio/blob/master/license.txt\n\nTTSController\nhttps://github.com/ksasao/TTSController/blob/master/LICENSE\n\nSpecial Thanks\nbootjp様","url":"https://booth.pm/ja/items/1175951","offers":{"priceCurrency":"JPY","@type":"Offer","price":"0"},"image":"https://booth.pximg.net/c/620x620/de8de267-62ad-45e9-88e3-e15de9a05583/i/1175951/881c1e35-83d7-4bf1-9df7-5347aeb31536_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="9CNJ+rU1Uo769bGpofRWJxZJUam1a0xWO6/VL5CNvmE="></script>
+    nonce="T404qDqI5jqr0wxc0cmvpvHFaRJN3/GfVvCr8YnZNoE="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -373,9 +373,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
